--- a/src/main/resources/com/donoso/easyflight/vista/Vuelos.fxml
+++ b/src/main/resources/com/donoso/easyflight/vista/Vuelos.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.planemanagement.planemanagement.controlador.VuelosController">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.donoso.easyflight.controlador.VuelosController">
    <children>
       <AnchorPane prefHeight="200.0" prefWidth="200.0">
          <children>
