--- a/src/main/resources/com/donoso/easyflight/vista/ManageBooking.fxml
+++ b/src/main/resources/com/donoso/easyflight/vista/ManageBooking.fxml
@@ -1,9 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.donoso.easyflight.vista.ManageBooking"
+            fx:controller="com.donoso.easyflight.controlador.ManageBookingController"
             prefHeight="400.0" prefWidth="600.0">
+
+    <AnchorPane layoutX="8.0" layoutY="8.0" prefHeight="531.0" prefWidth="872.0" stylesheets="@../estilos/GestionVuelos.css">
+        <children>
+            <AnchorPane prefHeight="302.0" prefWidth="871.0" stylesheets="@../estilos/GestionVuelos.css">
+                <styleClass>
+                    <String fx:value="white-bg" />
+                    <String fx:value="shadow" />
+                </styleClass>
+                <children>
+                    <TableView fx:id="tableViewReservas" layoutX="19.0" layoutY="48.0" prefHeight="231.0" prefWidth="836.0" onMouseClicked="#handleRowSelection">
+                        <columns>
+                            <TableColumn fx:id="column_IdReserva" prefWidth="82.39997863769531" text="ID" />
+                            <TableColumn fx:id="column_Usuario" prefWidth="120.79998779296875" text="Usuario" />
+                            <TableColumn fx:id="column_Vuelo" prefWidth="104.00003051757812" text="Vuelo" />
+                            <TableColumn fx:id="column_Oferta" prefWidth="97.5999755859375" text="Oferta" />
+                            <TableColumn fx:id="column_FechaReserva" prefWidth="131.20001220703125" text="Fecha Reserva" />
+                            <TableColumn fx:id="column_Viajeros" prefWidth="96.79998779296875" text="Viajeros" />
+                            <TableColumn fx:id="column_Extras" prefWidth="116.00006103515625" text="Extras" />
+                            <TableColumn fx:id="column_Total" prefWidth="88.80010986328125" text="Total" />
+                        </columns>
+                    </TableView>
+                    <TextField fx:id="txtSearchReservas" layoutX="32.0" layoutY="14.0" prefHeight="26.0" prefWidth="283.0" promptText="Search" styleClass="search" stylesheets="@../estilos/GestionVuelos.css" onKeyReleased="#buscar"/>
+                </children>
+            </AnchorPane>
+            <TextField fx:id="txt_IdReserva" layoutX="120.0" layoutY="323.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <Label layoutX="88.0" layoutY="329.0" text="ID:" />
+            <Label layoutX="27.0" layoutY="418.0" text="Fecha Reserva:" />
+            <Label layoutX="63.0" layoutY="374.0" text="Usuario:" />
+            <TextField fx:id="txt_TotalReserva" layoutX="424.0" layoutY="413.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <TextField fx:id="txt_OfertaReserva" layoutX="424.0" layoutY="370.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <Label layoutX="379.0" layoutY="329.0" text="Vuelo:" />
+            <Label layoutX="383.0" layoutY="418.0" text="Total:" />
+            <Label layoutX="380.0" layoutY="374.0" text="Oferta:" />
+            <Button fx:id="buttont_UpdateReserva" layoutX="698.0" layoutY="327.0" mnemonicParsing="false" onAction="#updateReserva" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Update" />
+            <Button fx:id="buttont_ClearReserva" layoutX="698.0" layoutY="371.0" mnemonicParsing="false" onAction="#cleanFields" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Clear" />
+            <Button fx:id="buttont_DeleteReserva" layoutX="698.0" layoutY="411.0" mnemonicParsing="false" onAction="#deleteReserva" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Delete" />
+            <TextField fx:id="txt_FechaReserva" layoutX="120.0" layoutY="413.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <TextField fx:id="txt_UsuarioReserva" layoutX="122.0" layoutY="370.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <TextField fx:id="txt_VueloReserva" layoutX="425.0" layoutY="324.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+            <Label layoutX="22.0" layoutY="461.0" onMouseClicked="#openManageViajerosExtra" prefHeight="18.0" prefWidth="88.0" text="Viajeros Extras" />
+        </children>
+        <styleClass>
+            <String fx:value="shadow" />
+            <String fx:value="white-bg" />
+        </styleClass>
+    </AnchorPane>
 
 </AnchorPane>
