--- a/src/main/resources/com/donoso/easyflight/vista/ManageOffer.fxml
+++ b/src/main/resources/com/donoso/easyflight/vista/ManageOffer.fxml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import java.lang.String?>
+<?import javafx.scene.layout.*?>
+
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.donoso.easyflight.controlador.ManageOfertaController"
@@ -19,32 +22,36 @@
                         <TableView fx:id="tableViewOfertas" layoutX="32.0" layoutY="48.0" prefHeight="231.0" prefWidth="805.0" onMouseClicked="#handleRowSelection">
                             <columns>
                                 <TableColumn fx:id="column_IdOferta" prefWidth="72.79997253417969" text="ID" />
-                                <TableColumn fx:id="column_Nombre" prefWidth="111.20001220703125" text="Nombre" />
+                                <TableColumn fx:id="column_NombreOferta" prefWidth="111.20001220703125" text="Nombre" />
                                 <TableColumn fx:id="column_Descripcion" prefWidth="196.80001831054688" text="Descripción" />
                                 <TableColumn fx:id="column_Descuento" prefWidth="115.99993896484375" text="Descuento" />
                                 <TableColumn fx:id="column_FechaInicio" prefWidth="148.800048828125" text="Fecha Inicio" />
                                 <TableColumn fx:id="column_FechaFinal" prefWidth="165.60003662109375" text="Fecha Final" />
+                                <TableColumn fx:id="column_Vuelo" prefWidth="98.40008544921875" text="Vuelo" />
                             </columns>
                         </TableView>
-                        <TextField fx:id="txtSearchOferta" layoutX="32.0" layoutY="14.0" prefHeight="26.0" prefWidth="283.0" promptText="Search" styleClass="search" stylesheets="@../estilos/GestionVuelos.css" onKeyReleased="#buscar" />
+                        <TextField fx:id="txtSearchOferta" layoutX="32.0" layoutY="14.0" prefHeight="26.0" prefWidth="283.0" promptText="Search" styleClass="search" stylesheets="@../estilos/GestionVuelos.css" onKeyReleased="#buscar"/>
                     </children>
                 </AnchorPane>
                 <TextField fx:id="txt_IdOferta" layoutX="120.0" layoutY="323.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
                 <Label layoutX="88.0" layoutY="329.0" text="ID:" />
-                <Label layoutX="49.0" layoutY="418.0" text="Descripción:" />
+                <Label layoutX="43.0" layoutY="454.0" text="Descripción:" />
                 <Label layoutX="58.0" layoutY="374.0" text="Nombre:" />
                 <Button fx:id="buttont_AddOferta" layoutX="660.0" layoutY="325.0" mnemonicParsing="false" onAction="#addOferta" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Add" />
                 <Button fx:id="buttont_UpdateOferta" layoutX="660.0" layoutY="370.0" mnemonicParsing="false" onAction="#updateOferta" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Update" />
                 <Button fx:id="buttont_ClearOferta" layoutX="660.0" layoutY="414.0" mnemonicParsing="false" onAction="#cleanFields" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Clear" />
                 <Button fx:id="buttont_DeleteOferta" layoutX="660.0" layoutY="454.0" mnemonicParsing="false" onAction="#deleteOferta" prefHeight="26.0" prefWidth="90.0" styleClass="buttonAction" stylesheets="@../estilos/GestionVuelos.css" text="Delete" />
                 <TextField fx:id="txt_NombreOferta" layoutX="122.0" layoutY="370.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
-                <TextArea fx:id="txt_DescripcionOferta" layoutX="120.0" layoutY="417.0" prefHeight="98.0" prefWidth="179.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+
+                <TextArea fx:id="txt_DescripcionOferta" layoutX="120.0" layoutY="457.0" prefHeight="58.0" prefWidth="469.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
                 <Label layoutX="331.0" layoutY="328.0" text="Descuento:" />
                 <Label layoutX="331.0" layoutY="374.0" text="Fecha Inicio:" />
-                <Label layoutX="331.0" layoutY="418.0" text="Fecha Final:" />
+                <Label layoutX="48.0" layoutY="418.0" text="Fecha Final:" />
                 <TextField fx:id="txt_DescuentoOferta" layoutX="404.0" layoutY="324.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
                 <DatePicker fx:id="date_FechaInicio" layoutX="404.0" layoutY="370.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
-                <DatePicker fx:id="date_FechaFinal" layoutX="404.0" layoutY="414.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+                <DatePicker fx:id="date_FechaFinal" layoutX="122.0" layoutY="415.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
+                <Label layoutX="350.0" layoutY="419.0" text="Vuelo:" />
+                <ComboBox fx:id="combo_VueloOferta" layoutX="402.0" layoutY="414.0" prefHeight="26.0" prefWidth="175.0" styleClass="textfield" stylesheets="@../estilos/GestionVuelos.css" />
             </children>
             <styleClass>
                 <String fx:value="shadow" />
